# better-with-aether-wiki

./: .readthedocs.yaml  README.md  README.rst  gif.txt  mkdocs.yml  pyproject.toml
docs/: .nav.yml  about.md  contribution.md  index.md  scripts.js
docs/World_Features/: .nav.yml
docs/World_Features/dungeons/: .nav.yml
docs/assets/: custom.css
docs/blocks/: .nav.yml  aether_machines.md  blocks.md  dungeon_blocks.md  illigal_blocks.md  script.js
docs/effects/: .nav.yml  damage_type.md  effects.md
docs/entities/: .nav.yml  Damage Types.md  boss.md  mimic.md  mobs.md  wallace.md
docs/items/: .nav.yml
docs/items/accessories/: .nav.yml  accessory.md  cape.md  gloves.md
docs/items/accessories/trinkets/: .nav.yml
docs/items/tools/: .nav.yml
