[project]
name = "better-with-aether-wiki"
version = "1.0.0"
description = ""
readme = "README.rst"
requires-python = ">=3.13"
dependencies = [
    "poethepoet>=0.37.0",
    "mkdocs~=1.6",
    "mkdocs-material>=9.5.0",
    "jinja2~=3.1",
    "markdown~=3.2",
    "pygments~=2.16",
    "pymdown-extensions~=10.2",
    "pymdown-extensions"
]

[tool.poe.tasks]
dev = "mkdocs serve"
